# noiseproof-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  db.py  main.py  migration_runner.py  schemas.py  settings.py
apps/api/tests/: test_clamav_adapter_smoke_command.py  test_clamav_api_malicious_detection_harness.py  test_compose.py  test_cross_publisher_real_world_pdf_fixture_gate.py  test_current_state_reconciliation_after_master_spec.py  test_db.py  test_docs.py  test_embedding_model_live_provider_harness.py  test_embedding_provider_wiring.py  test_external_feedback.py  test_licensed_real_world_pdf_fixture_pack.py  test_live_embedding_domain_qrels_harness.py  test_live_lexical_qrels_baseline.py  test_live_semantic_qrels_baseline.py  test_master_spec_operating_loop.py  test_migration_runner.py  test_missing_pdf_runtime_observation_pack.py  test_multi_fixture_ocr_adapter_eval.py  test_multi_fixture_pdf_extraction_quality.py  test_multi_publisher_modality_stratified_pdf_eval.py  test_multi_real_world_pdf_parse_observation_matrix.py  test_ocr_layout_image_binary_fixture_provenance.py  test_ocr_layout_image_fixture_adapter_runtime_pack.py  test_openai_embedding_provider.py  test_opt_in_ocr_adapter_runtime_smoke.py  test_owner_approved_real_world_pdf_download_hash.py  test_pdf_extraction_quality.py  test_proof_gap_action_surface_current_state_refresh.py  test_proof_gap_priority_matrix.py  test_raw_file_scanning.py  test_readme_marketing_surface.py  test_routes.py  (+32 more)
(+1150 files in other folders)
