[project]
name = "noiseproof-agent-api"
version = "0.22.0"
description = "Phased FastAPI service for NoiseProof Agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.7.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.0",
  "pymupdf>=1.24.0",
  "openai==2.41.0",
  "opentelemetry-sdk>=1.42.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "httpx2>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "error::starlette.exceptions.StarletteDeprecationWarning",
]
